Fix search header link spacing. Closes #1706

--- a/sites/all/themes/pul_base/assets/source/styles/components/search/_search--results.scss
+++ b/sites/all/themes/pul_base/assets/source/styles/components/search/_search--results.scss
@@ -35,6 +35,7 @@
 
     a {
       border-bottom: 1px solid $gray;
+      line-height: 2rem;
 
       &:hover {
         border-bottom: 1px solid $orange;
